// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBar /> shows the correct snapshot tree for the <SearchBar> module (no value) 1`] = `
.css-0,
[data-css-0] {
  position: relative;
  max-width: 1392px;
  margin-right: auto;
  margin-left: auto;
  padding-right: 8px;
  padding-bottom: 16px;
  padding-left: 8px;
  margin-bottom: 40px;
}

.css-1,
[data-css-1] {
  position: relative;
  background-color: #fff;
}

.css-2,
[data-css-2] {
  position: relative;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  margin-top: 24px;
  color: #808080;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-3,
[data-css-3] {
  position: absolute;
  top: 12px;
  left: 0;
}

.css-4,
[data-css-4] {
  width: 100%;
  margin: 0;
  padding: 8px;
  padding-left: 40px;
  font-family: inherit;
  font-size: 34px;
  font-weight: 200;
  color: inherit;
  background-color: transparent;
  border: 0;
  border-bottom: 1px solid;
  outline: none;
  -webkit-appearance: textfield;
}

<div
  className="css-0"
>
  <form
    acceptCharset="UTF-8"
    action="/searchbar-test"
    className="css-1"
    method="get"
    onSubmit={[Function]}
  >
    <label
      className="css-2"
      htmlFor="forId"
    >
      <span
        className="css-3"
      >
        <svg
          className="css-nil"
          height={32}
          viewBox="0 0 28 28"
          width={32}
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="1"
          >
            <g
              transform="translate(-40.000000, -119.000000)"
            >
              <g
                transform="translate(19.000000, 104.000000)"
              >
                <g
                  transform="translate(23.000000, 17.000000)"
                >
                  <path
                    d="M17.7401739,8.86956522 C17.7401739,3.97147826 13.7681739,0 8.86956522,0 C3.972,0 0,3.97147826 0,8.86956522 C0,13.7676522 3.972,17.7391304 8.86956522,17.7391304 C13.7681739,17.7391304 17.7401739,13.7676522 17.7401739,8.86956522 Z"
                  />
                  <path
                    d="M15.2007652,15.1997217 L23.9998957,23.9998957"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
      </span>
      <input
        aria-label="Search for applicants"
        autoCapitalize="off"
        autoComplete="off"
        autoCorrect="off"
        className="css-4"
        id="forId"
        onChange={[Function]}
        placeholder="Search Applicants"
        type="search"
        value=""
      />
    </label>
  </form>
</div>
`;

exports[`<SearchBar /> shows the correct snapshot tree for the <SearchBar> module (with value) 1`] = `
.css-0,
[data-css-0] {
  position: relative;
  max-width: 1392px;
  margin-right: auto;
  margin-left: auto;
  padding-right: 8px;
  padding-bottom: 16px;
  padding-left: 8px;
  margin-bottom: 40px;
}

.css-1,
[data-css-1] {
  position: relative;
  background-color: #fff;
}

.css-2,
[data-css-2] {
  position: relative;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  margin-top: 24px;
  color: #808080;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-3,
[data-css-3] {
  position: absolute;
  top: 12px;
  left: 0;
}

.css-4,
[data-css-4] {
  width: 100%;
  margin: 0;
  padding: 8px;
  padding-left: 40px;
  font-family: inherit;
  font-size: 34px;
  font-weight: 200;
  color: inherit;
  background-color: transparent;
  border: 0;
  border-bottom: 1px solid;
  outline: none;
  -webkit-appearance: textfield;
}

<div
  className="css-0"
>
  <form
    acceptCharset="UTF-8"
    action="/searchbar-test-2"
    className="css-1"
    method="get"
    onSubmit={[Function]}
  >
    <label
      className="css-2"
      htmlFor="forId2"
    >
      <span
        className="css-3"
      >
        <svg
          className="css-nil"
          height={32}
          viewBox="0 0 28 28"
          width={32}
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="1"
          >
            <g
              transform="translate(-40.000000, -119.000000)"
            >
              <g
                transform="translate(19.000000, 104.000000)"
              >
                <g
                  transform="translate(23.000000, 17.000000)"
                >
                  <path
                    d="M17.7401739,8.86956522 C17.7401739,3.97147826 13.7681739,0 8.86956522,0 C3.972,0 0,3.97147826 0,8.86956522 C0,13.7676522 3.972,17.7391304 8.86956522,17.7391304 C13.7681739,17.7391304 17.7401739,13.7676522 17.7401739,8.86956522 Z"
                  />
                  <path
                    d="M15.2007652,15.1997217 L23.9998957,23.9998957"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
      </span>
      <input
        aria-label="Search for applicants"
        autoCapitalize="off"
        autoComplete="off"
        autoCorrect="off"
        className="css-4"
        id="forId2"
        onChange={[Function]}
        placeholder="Search Applicants"
        type="search"
        value="Foo"
      />
    </label>
  </form>
</div>
`;
